--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,14 +4,14 @@
             <form class="form w-4/6" [formGroup]="loginForm" (ngSubmit)="onSubmitForm()">
                 <section>Chào mừng trở lại</section>
                 <div class="control">
-                    <label for="email">Email</label>
-                    <input type="text" id="email" formControlName="email">
+                    <label for="email">Tài khoản</label>
+                    <input type="text" id="email" formControlName="username">
                 </div>
                 <div class="control">
                     <label for="password">Mật khẩu</label>
                     <input type="password" id="password" formControlName="password">
                 </div>
-                <button>Đăng nhập</button>
+                <button [type]="'submit'" [disabled]="!loginForm.valid">Đăng nhập</button>
             </form>
         </div>
         <div class="flex justify-center items-center">
